# chat_api_fast_api

./: README.md  docker-compose.yml  dockerfile  env.example.env  requirements.txt
Agents_online/: Makefile  README.md  pyproject.toml
Agents_online/configs/: pinecone_retriever.yaml
Agents_online/src/agents_online/: config.py  opik_utils.py
Agents_online/src/agents_online/application/: __init__.py
Agents_online/src/agents_online/application/agents/: __init__.py  agents.py
Agents_online/src/agents_online/application/agents/tools/: __init__.py  nutiration_calulator.py  pinecone_retriever.py  safety_validator.py  summarizer.py  what_can_i_do.py  workout_plan.py
Agents_online/src/agents_online/application/evaluation/: __init__.py  evaluate.py  summary_density_heuristic.py  summary_density_judge.py
Agents_online/src/agents_online/application/rag/: __init__.py  embeddings.py  retrievers.py  splitters.py
Agents_online/tools/: app.py  evaluate_app.py
app/: main.py
app/api/: dependencies.py
app/api/endpoints/: auth.py  chat.py  health.py
app/core/: config.py  security.py
app/db/: mongodb.py  redis.py
app/schemas/: chat.py
app/services/: gemini_service.py  session_service.py
app/tests/: test_api.py  test_chat.py
infrastructure/docker/: Dockerfile  docker-compose.yml
